--- a/ZZZ/index.html
+++ b/ZZZ/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <div class="cabeçalho">
-        <h1 class="titulo">Conheça a new gen 11</h1>
-        <h3 class="subtitulo">A nova moda do momento!</h3>
+        <h1 class="titulo"></h1>
+        <h3 class="subtitulo"></h3>
+        <h4 class="botao"></h4><br></h4>
 </div>
 <div class="spacer"></div>
 <section>
@@ -26,72 +27,142 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="13"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="14"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="15"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                        <img src="imagens/sv03_ptbr_66-yx00mqpj3g.webp" class="d-block w-100" alt="imagem 1">
+                        <img src="imagens/açai.jpg" class="d-block w-100" alt="imagem 1">
                     <div class="carousel-caption">
-                        <h1>rosa Azul</h1>
+                        <h5>Açai</h5>
+                        <h6>R$30</h6>
                         <p></p>
                     </div>
                 </div>
-
                 <div class="carousel-item">
-                        <img src="imagens/images.jpeg" class="d-block w-100" alt="imagem 2">
+                        <img src="imagens/bolo de sorvete de chocolate.jpg" class="d-block w-100" alt="imagem 2">
                     <div class="carousel-caption">
-                        <h1>the genius</h1>
+                        <h5>bolo chocolate</h5>
+                        <h6>R$120</h6>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                        <img src="imagens/images.jpe" class="d-block w-100" alt="imagem 3">
+                        <img src="imagens/pote de sorvete de morango.jpg" class="d-block w-100" alt="imagem 3">
                     <div class="carousel-caption">
-                        <h1>new gen</h1>
+                        <h5>pote de morango</h5>
+                        <h6>R$50</h6>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                        <img src="imagens/shidou-ryusei-theory-the-demon-v0-usps7k10vkva1.webp" class="d-block w-100" alt="imagem 4">
+                        <img src="imagens/kibom.webp" class="d-block w-100" alt="imagem 4">
                     <div class="carousel-caption">
-                        <h1>the demon</h1>
+                        <h5>pote de creme</h5>
+                        <h6>R$140</h6>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                        <img src="imagens/5f974682b70e0d6a1582bdff42cbdca4.jpg" class="d-block w-100" alt="imagem 5">
+                        <img src="imagens/sorvete-de-abacate.jpg" class="d-block w-100" alt="imagem 5">
                     <div class="carousel-caption">
-                        <h1>king of demon</h1>
+                        <h5>abacate </h5>
+                        <h6>R$20</h6>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                        <img src="imagens/b567a04a9d81358d28b24c3af1a7da6b.jpg" class="d-block w-100" alt="imagem 6">
+                        <img src="imagens/sorvete-de-abacaxi.jpg" class="d-block w-100" alt="imagem 6">
                     <div class="carousel-caption">
-                        <h1>Carro Germanico</h1>
+                        <h5>abacaxi</h5>
+                        <h6>R$20</h6>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                        <img src="imagens/a08196edafb6138ce5554b27e3fe28dc.jpg" class="d-block w-100" alt="imagem 7">
+                        <img src="imagens/Sorvete-de-Acerola-Cremoso.jpg" class="d-block w-100" alt="imagem 7">
                     <div class="carousel-caption">
-                        <h1>Progídio</h1>
+                        <h5>acerola cremoso</h5>
+                        <h6>R$30</h6>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                        <img src="imagens/1184de4fd8003c50a3796365ec2675d8.jpg" class="d-block w-100" alt="imagem 8">
+                        <img src="imagens/sorvete-de-banana.jpg" class="d-block w-100" alt="imagem 8">
                     <div class="carousel-caption">
-                        <h1>Skark</h1>
+                        <h5>banana</h5>
+                        <h6>R$30</h6>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                    <img src="imagens/783a9e6f2ea5d401a35710a5b9cadf0c.jpg" class="d-block w-100" alt="imagem 9">
+                    <img src="imagens/sorvete-de-baunilha.jpg" class="d-block w-100" alt="imagem 9">
                     <div class="carousel-caption">
-                    <h1>the carz genius</h1>
+                        <h5>baunilha</h5>
+                        <h6>R$20</h6>
                     </div>
                 </div>
-            </div>
+                <div class="carousel-item">
+                        <img src="imagens/sorvete-de-chocolate.jpg" class="d-block w-100" alt="imagem 10">
+                    <div class="carousel-caption">
+                        <h5>chocolate</h5>
+                        <h6>R$15</h6>
+                        <p></p>
+                    </div> 
+                </div>
+                <div class="carousel-item">
+                        <img src="imagens/sorvete-de-maracuja.jpg" class="d-block w-100" alt="imagem 11">
+                    <div class="carousel-caption">
+                        <h5>maracuja</h5>
+                        <h6>R$25</h6>
+                        <p></p>
+                    </div> 
+                </div>
+                <div class="carousel-item">
+                        <img src="imagens/3-pote-de-sorvete.jpg" class="d-block w-100" alt="imagem 12">
+                    <div class="carousel-caption">
+                        <h5>3 sorvete por</h5>
+                        <h6>R$40</h6>
+                        <p></p>
+                    </div> 
+                </div>
+                <div class="carousel-item">
+                        <img src="imagens/sorvete da casa.jpg" class="d-block w-100" alt="imagem 13">
+                    <div class="carousel-caption">
+                        <h5>sorvete da casa</h5>
+                        <h6>R$35</h6>
+                        <p></p>
+                    </div> 
+                </div>
+                 <div class="carousel-item">
+                        <img src="imagens/sorvete-de-menta.jpg" class="d-block w-100" alt="imagem 14">
+                    <div class="carousel-caption">
+                        <h5>menta</h5>
+                        <h6>R$15</h6>
+                        <p></p>
+                    </div> 
+                </div>
+                <div class="carousel-item">
+                        <img src="imagens/torre-de-sorevte.jpg" class="d-block w-100" alt="imagem 15">
+                    <div class="carousel-caption">
+                        <h5>torre de sorvete ate 7 bolas</h5>
+                        <h6>R$80</h6>
+                        <p></p>
+                    </div> 
+                </div>
+                <div class="carousel-item">
+                        <img src="imagens/propaganda.jpg" class="d-block w-100" alt="imagem 16">
+                    <div class="carousel-caption">
+                        <h5></h5>
+                        <h6></h6>
+                        <p></p>
+                    </div> 
+                </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Anterior</span>
@@ -101,16 +172,85 @@
                 <span class="sr-only">Próximo</span>
             </a>
         </div>
+    </div>
 </section>
 
 <div class="spacer"></div>
 
+<div class="convite">
+    <h2 class="titulo-convite">toda quarta 30 picoles de leite por R$15</h2>
+    <p class="subtitulo-convite">MELHOR SORVETERIA DE TOLEDO</p>
+</div>
+
+<div class="spacer"></div>
+
+<div class="contato">
+    <form id="contactForm">
+            <h2 class="titulo-formulario">Contate-nos </h2>
+        <input type="text" name="name" placeholder="Seu nome completo" required> 
+        <input type="email" name="email" placeholder="Seu email completo" required> 
+        <input type="numero" name="telefone" placeholder="Seu telefone - opcional"> 
+        <button type="submit" class="enviar">Enviar</button>
+        
+        <div class="checkbox-container">
+            <input type="checkbox" id="dataConsent" class="verifica" name="dataConsent" required>
+            <label for="dataConsent">Eu concordo com a <a href="#" data-toggle="modal" data-target="#lgpdModal">Política de privacidade</a> e o uso dos meus dados conforme a LGPD.
+            </label>
+        </div>
+    </form>
+</div>
+
+<!-- modal lgpd -->
+<div class="modal fade" id="lgpdModal" tabindex="-1" role="dialog" aria-labelledby="lgpdModalLabel" aria-hidden="true"></div>
+
+<div class="modal-dialog" role="document">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="lgpdModalLabel">Lei Geral de Preteção de Dados (LGPD)</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <p>A Lei de Proteção de Dados (LGPD) é a legislação brasileira que ergula as atividades de tratamento de dados pessoais. 
+                Ela tem como objetivo proteger os direitos fundamentais de liberdade e de privacidade, bem como o livre desenvolvimento 
+                da personalidade da pessoa natural.
+            </p>
+            <p>Pontos principais da LGPD:
+            </p>
+            <ul>
+                <li>Transparência: As organizações devem fornecer informações claras sobre a coleta, uso e armazenamento dos dados 
+                    pessoais.
+                </li>
+                <li>Cinsentimento: O consentimento do titular deve ser obtido para o tratamento de dados, salvo exceções previstas 
+                    na lei.
+                </li>
+                <li>Finalidade: Os dados devem ser coletados para propósitos específicos, explícitos e legítimos. 
+                </li>
+                <li>Segurança: As organizações devem garantir a proteção dos dados pessoais contra acessos não autorizados e situações acidentais
+                    ou ilícitas.  
+                </li>
+                <li>Direitos dos tiulares: Os titulares dos dados têm o direito de acessar, corrigir, eliminar e portabilizar seus
+                    dados pessoais. </li>
+            </ul>
+            <p>Para mais informações, visite o 
+                <a href="https://www.gov.br/secretariageral/pt-br/assuntos/lgpd">site oficial da LGPD</a>.
+            </p>
+        </div>
+        <div class="modal-footer">
+            <button type="bitton" class="btn-secondary" data-dismiss="modal">Fechar</button>
+        </div>
+    </div>
+</div>
+
+
+
 <footer class="rodapé">
-    <p>&copy; motor</p>
+    <p>&copy; 2025 Domício Pedra</p>
 </footer>
 
     <!-- Bootstrap JS, Popper.js, jQuery -->
-    <script src="https://code.jQuery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="land.js"></script>
